2011-09-10 .60
    * Added add_timestamp_column. This adds a "added" timestamp column to the
	database which records when a record was added.
	- IsaacG

2011-01-16 .50
    * Added stalker_stalk_on_join option.  Turning this on will show previous
    nicknames when a user joins "foo foo@bar has joined #perl ( foo, bar, blee
    )"
    Thanks to an anonymous submitter for the patch and suggestion.

2010-10-09
    * Added channel sync event handling to replace who on join
    * Removed hide_who option (no longer needed)
    * Thanks to Wouter Coekaerts for the suggestion!
2010-10-06
    * Added patch by Mantas Mikulėnas "Make the default paths relative 
      to Irssi home directory" to correct issue with paths when starting
      stalker.pl outside of ~/

2010-10-06
    * Released to GitHub 

2009-11-29 R2
    * Rolled version back and deleted changes from 2009-11-29 R1.

2009-11-29 R1
    * Modified records to output nick(R=<Level>) to mark recursion level.

2009-01-01
    * Fixed bug where script crashes due do lack of hostname info.
    * Added debug logging support.

2008-11-27
    * Automatic database creation added.
    * /nick_lookup, /host_lookup added

2008-11-01
    * New search method to support recursive searched added.
    * New Options Added: _max_recursion, _recursive_search, _guest_nick_regex, _ignore_guest_nicks

2008-10-25
    * Inital Creation