@@ -1,4 +1,14 @@
-2011-09-10 .60
+2011-08-12 .62
+    * Added stalker_normalize_nick option, default on.
+      When set, nicknames which contain any of '-_~^`' will not
+      be shown if a version without those exist.  For example
+      results like "symkat`, symkat, sym`kat" will just be "symkat",
+      while results like "`foo bar bar`" would be "`foo bar".
+      When turned off, acts as before, listing all nicknames.
+      Inspired by VinzNL's branch on GitHub.
+        - SymKat
+
+2011-08-10 .60
     * Added add_timestamp_column. This adds a "added" timestamp column to the
 	database which records when a record was added.
 	- IsaacG
